--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,11 +69,11 @@
 				<img th:src="@{/img/logo1.png}" alt="logo1.png" height="200">
 			</div>
 			<div class="col-md-8">
-				<h4 class="text-center">Landmark Technology - Software Development & DevOps Automation.</h4>
+				<h4 class="text-center">Sani Solautions - Software Development & DevOps Automation.</h4>
 				<h3 class="text-center">Tel
-					+1 437-215-2483; mylandmarktech@gmail.com</h3>
+					+45 71573047; forchu.cha@gmail.com</h3>
 				<h5 class="text-center">
-					Copyright 2021 by <a href="http://www.mylandmarktech.com/">Landmark Technology
+					Copyright 2021 by <a href="http://www.kamstrup.com/">Sani Solutions
 						</a>
 				</h5>
 			</div>
