--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1 class="text-center">SpringBootApp + MongoDB with Jenkins, Docker and K8S</h1>
+		<h1 class="text-center">KAMSTRUP DEMO SpringBootApp + MongoDB with Jenkins, Docker and K8S</h1>
 		<div class="col-md-6">
 			<form name="saveUser" action="/save" method="post"
 				class="form-horizontal">
@@ -69,7 +69,7 @@
 				<img src="../static/img/images.png" alt="logo1.png" height="200">
 			</div>
 			<div class="col-md-8">
-				<h4 class="text-center">Sani Solautions - Software Development & DevOps Automation.</h4>
+				<h4 class="text-center">CAHAFH SANI - DevOps Engineer.</h4>
 				<h3 class="text-center">Tel
 					+45 71573047; forchu.cha@gmail.com</h3>
 				<h5 class="text-center">
